--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "cache-loader": "^1.0.3",
+    "clean-webpack-plugin": "^0.1.16",
     "history": "^4.7.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
