--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,9 @@
 {
-  "presets": [
-    "env",
-    "stage-0",
-    "stage-1",
-    "react"
+  "plugins": [
+    "@babel/plugin-proposal-export-default-from"
   ],
-  "env": {
-    "start": {
-      "presets": [
-        "react-hmre"
-      ]
-    }
-  }
+  "presets": [
+    "@babel/preset-env",
+    "@babel/preset-react"
+  ]
 }
