--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "repository": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development",
-    "production": "webpack --mode production",
+    "deploy": "./deploy.sh",
+    "build:prod": "webpack --mode production",
+    "build:dev": "webpack --mode development",
+    "dev": "webpack-dev-server --mode development",
     "lint": "eslint app/; exit 0",
     "fix": "eslint --fix app/; exit 0"
   },
