--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/register": "^7.0.0",
     "babel-loader": "^8.0.4",
     "cache-loader": "^1.0.3",
+    "classnames": "^2.2.6",
     "clean-webpack-plugin": "^0.1.16",
     "history": "^4.7.2",
     "html-webpack-plugin": "^3.2.0",
