--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "babel-loader": "^8.0.4",
+    "babel-plugin-jsx-control-statements": "^3.2.8",
     "cache-loader": "^1.0.3",
     "classnames": "^2.2.6",
     "clean-webpack-plugin": "^0.1.16",
+    "eslint-plugin-jsx-control-statements": "^2.2.1",
     "history": "^4.7.2",
     "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.11",
